Revert "Snap for 7800789 from 1a4503ae57c01536da13adc30f1808d0bb..."
Revert submission 1848073-release-request-5aa371b2-a5ca-4f15-9c82-f6e6782ec70f-for-aosp-sdk-release-7800789

Reason for revert: admin
Reverted changes: /q/submissionid:1848073-release-request-5aa371b2-a5ca-4f15-9c82-f6e6782ec70f-for-aosp-sdk-release-7800789

Change-Id: I0bc51d44666d6848efca675d827d17e9ceba0d95

--- a/gki/kmi_abi_chk/Makefile
+++ b/gki/kmi_abi_chk/Makefile
@@ -21,11 +21,10 @@ KSRC=${GKI_DIR}/out/android12-${GKI_VER}/common
 
 GKI_BID ?= 7618735
 CFLAGS_kmi_sym_main.o = -DGKI_BID=${GKI_BID}
-AFLAGS_kmi_sym_list.o = -DGKI_BID=${GKI_BID}
 
 all:
 	make -C $(KSRC) M=$(PWD) modules
-	cp kmi_sym.ko prebuilts/kmi_sym-a12-${GKI_VER}-${GKI_BID}.ko
+	mv kmi_sym.ko kmi_sym-a12-${GKI_VER}.ko
 
 clean:
 	make -C $(KSRC) M=$(PWD) clean
